# clif

./: .gitignore  Cargo.toml  README.md  figlet.txt
src/: lib.rs  main.rs
src/args/: args.rs
src/fuzzer/: fuzzer.rs  mod.rs
testdata/: bof  bof.c
