[package]
name = "clif"
version = "0.1.0"
edition = "2021"
authors = ["Andy <andy@andy.codes>"]
license = "GNU General Public License v3.0"
description = "Simple command-line application fuzzer."
readme = "README.md"
homepage = "https://github.com/0x4ndy"
repository = "https://github.com/0x4ndy"
keywords = ["cli", "automation", "fuzzer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.25"
shellwords = "1.1"
